<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/foto_perfil"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txt_description"
            android:textSize="14sp" />

    </ScrollView>

    <Button
        android:id="@+id/btProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_projects"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp"/>

    <Button
        android:id="@+id/btContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_margin="20dp"/>


</LinearLayout>
