<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Contact">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_toolbar_contact"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_back"
        android:background="@color/dark_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <ImageView
        android:id="@+id/icPhone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintTop_toBottomOf="@id/toolbarContact"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_phone"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/icPhone"
        app:layout_constraintStart_toEndOf="@id/icPhone"
        />

    <ImageView
        android:id="@+id/icEmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/txtPhone"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/icEmail"
        app:layout_constraintStart_toEndOf="@id/icEmail"
        />

    <ImageView
        android:id="@+id/btWhatsApp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/logo_whatsapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    
</androidx.constraintlayout.widget.ConstraintLayout>